--- a/noticia_2024_07_08.html
+++ b/noticia_2024_07_08.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Título da Notícia - DATA</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>A Notícia Mais Importante do Dia Sobre BTC</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="arquivo.html">Arquivo</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h2>Título da Notícia</h2>
+            <p>Conteúdo da notícia sobre Bitcoin...</p>
+            <p>Data: DATA</p>
+            <p>Autor: Nome do Autor</p>
+        </article>
+    </main>
+    <footer>
+        <p>&copy; 2024 A Notícia Mais Importante do Dia Sobre BTC</p>
+    </footer>
+    <script src="js/script.js"></script>
+</body>
+</html>
