--- a/noticia_2024_07_08.html
+++ b/noticia_2024_07_08.html
@@ -3,7 +3,7 @@ a <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título da Notícia - DATA</title>
+    <title>Novo site de notícias no ar - 2024.07.07</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@ a <!DOCTYPE html>
     <main>
         <article>
             <h2>Título da Notícia</h2>
-            <p>Conteúdo da notícia sobre Bitcoin...</p>
+            <p>Amanhã marca o lançamento do BTC MostImportant News, seu novo destino diário para as notícias mais relevantes sobre Bitcoin. Mantenha-se atualizado com as informações mais importantes e não perca nenhum detalhe crucial sobre o mundo das criptomoedas. Esteja preparado para o melhor conteúdo sobre BTC, direto ao ponto, todos os dias.</p>
             <p>Data: DATA</p>
             <p>Autor: Nome do Autor</p>
         </article>
