--- a/noticia_2024_07_08.html
+++ b/noticia_2024_07_08.html
@@ -21,8 +21,8 @@ a <!DOCTYPE html>
         <article>
             <h2>Título da Notícia</h2>
             <p>Amanhã marca o lançamento do BTC MostImportant News, seu novo destino diário para as notícias mais relevantes sobre Bitcoin. Mantenha-se atualizado com as informações mais importantes e não perca nenhum detalhe crucial sobre o mundo das criptomoedas. Esteja preparado para o melhor conteúdo sobre BTC, direto ao ponto, todos os dias.</p>
-            <p>Data: DATA</p>
-            <p>Autor: Nome do Autor</p>
+            <p>Data: 2024.07.07</p>
+            <p>Autor: Owner</p>
         </article>
     </main>
     <footer>
